# bike-sharing-ml

bike_sharing_ml/: pyproject.toml
bike_sharing_ml/notebooks/: 01_data_exploration.ipynb
bike_sharing_ml/src/bike_sharing_ml/: __init__.py  get_uci_data.py
