[project]
name = "bike-sharing-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alfoCaiazza", email = "acaiazza2000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]

[project.scripts]
bike-sharing-ml = "bike_sharing_ml:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.16.0",
]
